Ensure original cursor is restored after using mirror tools

BUG: 433285